# contextual-orchestrator

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  conftest.py  pyproject.toml  requirements-opencode-review-ci.in  requirements-opencode-review-ci.txt  requirements-security-ci.in  requirements-security-ci.txt  requirements-security-tools.in  requirements-security-tools.txt
.clusterfuzzlite/: Dockerfile
.github/: dependabot.yml
.superset/: config.json  run.sh
conductor/: index.md  product.md  tech-stack.md  tracks.md  workflow.md
contextual_orchestrator/: __init__.py  __main__.py  admin.py  api_contract.py  batch_routing.py  conventions.py  cost_ledger.py  cost_router.py  credentials.py  kv_config.py  operational_alerts.py  orchestrator.py  server.py  token_counting.py
docs/: analytics_spec.md  architecture.md  code_conventions.md  commercial_acceptance_check.md  commercial_buyer_acceptance_runbook.md  commercial_buyer_diligence_packet.md  commercial_buyer_evidence_manifest.md  commercial_buyer_handoff_bundle.md  commercial_close_readiness.md  commercial_completion_scorecard.md  commercial_contract_readiness.md  commercial_demo_scenarios.md  commercial_due_diligence_room.md  commercial_evidence_export.md  commercial_gap_register.md  commercial_go_to_market_readiness.md  commercial_investment_committee_memo.md  commercial_launch_readiness.md  commercial_mutual_action_plan.md  commercial_onboarding_readiness.md  commercial_operations_readiness.md  commercial_plugin_operating_model.md  commercial_procurement_readiness.md  commercial_proposal_packet.md  commercial_purchase_approval_packet.md  commercial_readiness.md  commercial_release_candidate.md  commercial_saleability_decision.md  commercial_saleability_gate.md  commercial_security_attestation.md  commercial_value_readiness.md  database_conventions.md  database_design.sql  figma_artifacts.md  fuzzing.md  i18n_design.md  kv-credentials.md  library_research.md  operational_alerts.md  plugin_driven_design_brief.md  (+5 more)
examples/: agents.mock.json  agents.openai.json
fuzz/: __init__.py  fuzz_agent_config.py  fuzz_orchestration.py  fuzz_redaction.py  fuzz_request_body.py  requirements-atheris.in  requirements-atheris.txt  requirements-property.in  requirements-property.txt  targets.py
tests/: test_admin_contract.py  test_admin_spend_view.py  test_agent_pool_db.py  test_analytics_runtime.py  test_api_contract.py  test_batch_api.py  test_batch_embeddings.py  test_batch_optimizer.py  test_batch_routing.py  test_budget_enforcement.py  test_buyer_evidence_manifest.py  test_buyer_handoff_bundle.py  test_clearfolio_integration.py  test_commercial_gap_register.py  (+53 more)
(+64 files in other folders)
