[project]
name = "contextual-orchestrator"
version = "0.1.0"
description = "Paper-grounded model orchestration lab with an enterprise admin console."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.128.0",
  "uvicorn>=0.38.0",
]
db = [
  "SQLAlchemy>=2.0",
  "alembic>=1.17",
  "psycopg[binary]>=3.2",
]
# Fuzzing extras. Both licenses are permissive (no GPL/AGPL/copyleft):
#   hypothesis -> MPL-2.0, atheris -> Apache-2.0.
# hypothesis runs the always-on property tests (tests/fuzz/) on every platform;
# atheris runs the coverage-guided harnesses (fuzz/) and needs a Clang/libFuzzer
# toolchain, so it is exercised in the dedicated CI job on Python 3.11.
fuzz = [
  "hypothesis>=6.100",
]
fuzz-coverage = [
  "atheris>=2.3; python_version < '3.13'",
]

[tool.pytest.ini_options]
# Put the repo root on sys.path so both ``contextual_orchestrator`` and the
# top-level ``fuzz`` package import under any pytest invocation (not only
# ``python -m pytest``). The Atheris harnesses in ``fuzz/`` import ``atheris``
# at module load and are excluded from collection via the root ``conftest.py``
# (``collect_ignore``), which -- unlike ``norecursedirs`` -- targets only the
# top-level ``fuzz/`` directory and not ``tests/fuzz/``.
pythonpath = ["."]

[tool.contextual_orchestrator]
object_name_pattern = "two_or_more_words_snake_case"

[tool.setuptools.packages.find]
include = ["contextual_orchestrator*"]

[tool.coverage.run]
source = ["contextual_orchestrator"]
omit = ["contextual_orchestrator/__main__.py", "contextual_orchestrator/server.py"]

[tool.coverage.report]
show_missing = true

[tool.interrogate]
exclude = ["tests"]
fail-under = 80
ignore-init-method = true
ignore-magic = true
ignore-nested-functions = true
ignore-private = true
ignore-property-decorators = true
ignore-semiprivate = true
